<resources>
    <string name="app_name">头条</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">主页</string>
    <string name="video">视频</string>
    <string name="concern">关注</string>
    <string name="mine">我的</string>
    <string name="feed_search_tip">搜索</string>
    <string name="forum_introduce">评论</string>
    <string name="mine_tab_followings_title">关注</string>
    <string name="mine_tab_followers_title">粉丝</string>
    <string name="mine_tab_visitors_title">7天访客</string>
    <string name="save">收藏</string>
    <string name="nightTheme">夜间</string>
    <string name="setting">设置</string>
</resources>
