<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.booboomx.todaynews.ui.activity.MainActivity">


    <com.booboomx.todaynews.widget.UnScrollViewPager
        android:id="@+id/viewPager"
        android:paddingBottom="40dp"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



    <RadioGroup
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/tab_rg_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:drawableTop="@drawable/tab_01"
            android:checked="true"
            android:id="@+id/tab_rb_1"
            style="@style/tab_rb_style"
            android:text="@string/home"
            />


        <RadioButton
            android:drawableTop="@drawable/tab_02"
            android:id="@+id/tab_rb_2"
            style="@style/tab_rb_style"
            android:text="@string/video"
            />
        <RadioButton
            android:drawableTop="@drawable/tab_03"
            android:id="@+id/tab_rb_3"
            style="@style/tab_rb_style"
            android:text="@string/concern"
            />
        <RadioButton
            android:drawableTop="@drawable/tab_04"
            android:id="@+id/tab_rb_4"
            style="@style/tab_rb_style"
            android:text="@string/mine"
            />

    </RadioGroup>







</RelativeLayout>
